<resources>
    <string name="app_name">Trabajo</string>

    <!-- mensajes general -->
    <string name="msj_generico_btn_agregar">Agregar</string>
    <string name="msj_generico_vacio">""</string>
    <string name="msj_generico_cencelar">Cancelar</string>
    <string name="msj_generico_title">Titulo</string>
    <string name="msj_generico_descripcion">Descripción</string>
    <string name="msj_generico_aceptar">Aceptar</string>
    <string name="msj_generico_si">Si</string>
    <string name="msj_generico_no">No</string>


    <!-- loggin -->
    <string name="loggin_msg_primer_nombres">Nombre(s)</string>
    <string name="loggin_msg_apellidos">Apellidos</string>
    <string name="loggin_msg_apellido_paterno">Apellido paterno</string>
    <string name="loggin_msg_apellido_materno">Apellido materno</string>
    <string name="loggin_msg_email">E-mail</string>
    <string name="loggin_msg_password">Password</string>
    <string name="loggin_msg_pais">Pais</string>
    <string name="loggin_btn_crear_cuenta">Crear cuenta</string>
    <string name="loggin_msg_saludo">Hola!</string>
    <string name="loggin_msg_title_REGISTRO">REGISTRO</string>
    <string name="loggin_msg_title_LOGIN">LOGIN</string>
    <string name="loggin_msg_title_fecha_nacimiento">Fecha de nacimiento</string>
    <string name="loggin_msg_Registrarse">Registrarse</string>

    <!-- nombre menu -->
    <string name="menu_comida_nombre_producto">Ingresa el nombre del producto</string>
    <string name="menu_comida_msj_ingres_precio_producto">Ingres el precio del producto</string>


    <!-- Biometric prom -->
    <string name="msj_huella_autenticacion_title">Acceder con huella a la app</string>
    <string name="msj_huella_autenticacion_auth">Autenticación con huella digital</string>
    <string name="msj_huella_autenticacion_escanea">Escanea tu huella para ingresar</string>
    <string name="msj_huella_autenticacion_toca_sensor">Toca el sensor</string>
    <string name="msj_Biometric_se_puede_autenticar">La aplicación puede autenticarse utilizando biometría.</string>
    <string name="msj_Biometric_no_biometric">No hay características biométricas disponibles en este dispositivo.</string>
    <string name="msj_Biometric_no_disponibles">Las características biométricas no están disponibles actualmente.</string>
    <string name="msj_Biometric_no_asociado">El usuario no ha asociado ninguna credencial biométrica con su cuenta.</string>


    <!-- fingerPrint-->

    <string name="title_fingerprint">Inicie secion con su huella</string>
    <string name="desc_fingerprint">Coloque la huella del dedo en el escáner para verificar su identidad.</string>
    <string name="note">(El inicio de sesión con huella digital hace que el inicio de sesión de su aplicación sea mucho más rápido. Su dispositivo debe tener al menos una huella digital registrada en la configuración del dispositivo)</string>
    <string name="title_activity_home">Huella dactilar</string>
    <string name="activity_home_desc">Has iniciado sesión correctamente con la autenticación de huella digital</string>
    <string name="activity_home_note">Cierre y vuelva a abrir la aplicación para ver la pantalla de autenticación de huellas digitales nuevamente</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_planetas">PlanetasAct</string>


</resources>
