<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialogo_generico">

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/tvGenericDialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/msj_generico_title"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/tvGenericDialogDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/msj_generico_descripcion"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/tvGenericDialogTitle"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGenericDialogDescripcion">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGenericDialogBotonNegativo"
            style="@style/generalButtonBlanco"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="3sp"
            android:layout_weight="1"
            android:text="@string/msj_generico_cencelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGenericDialogDescripcion" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGenericDialogBotonPositivo"
            style="@style/generalButtonBlanco"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="3sp"
            android:layout_weight="1"
            android:text="@string/msj_generico_aceptar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnGenericDialogBotonNegativo"
            app:layout_constraintTop_toBottomOf="@+id/tvGenericDialogDescripcion" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>