<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/clLoggin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/morado">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnCerrarRegistro"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="27dp"
            android:visibility="gone"
            android:layout_marginTop="36dp"
            android:background="@null"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatImageButton>

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/tvSaludo"
            android:layout_width="0dp"
            android:layout_height="67dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="27dp"
            android:text="@string/loggin_msg_saludo"
            android:textAlignment="center"
            android:textColor="@color/blanco"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatCheckedTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvtitleTipoVista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/loggin_msg_title_LOGIN"
            android:textColor="@color/blanco"
            app:layout_constraintStart_toStartOf="@+id/tvSaludo"
            app:layout_constraintTop_toBottomOf="@+id/tvSaludo">

        </androidx.appcompat.widget.AppCompatTextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:textColorHint="@color/blanco"
            app:boxStrokeColor="@color/blanco"
            android:visibility="gone"
            app:hintTextAppearance="@style/styloCabeceroTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvtitleTipoVista">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loggin_msg_primer_nombres"
                android:maxLength="5"
                android:inputType="text"
                android:textCursorDrawable="@drawable/cursor_blanco_generico"
                android:textColor="@color/blanco"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="203dp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tieApellidos"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/blanco"
            app:boxStrokeColor="@color/blanco"
            android:visibility="gone"
            app:hintTextAppearance="@style/styloCabeceroTextInputLayout"
            app:layout_constraintEnd_toEndOf="@+id/tilNombre"
            app:layout_constraintStart_toStartOf="@+id/tilNombre"
            app:layout_constraintTop_toBottomOf="@+id/tilNombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiApellidos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/loggin_msg_apellidos"
                android:textCursorDrawable="@drawable/cursor_blanco_generico"
                android:textColor="@color/blanco">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:textColorHint="@color/blanco"
            app:boxStrokeColor="@color/blanco"
            app:hintTextAppearance="@style/styloCabeceroTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tieApellidos">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/loggin_msg_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/blanco"
                android:textCursorDrawable="@drawable/cursor_blanco_generico">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/blanco"
            app:boxStrokeColor="@color/blanco"
            app:hintTextAppearance="@style/styloCabeceroTextInputLayout"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiPassword"
                android:layout_width="match_parent"
                android:textColor="@color/blanco"
                android:layout_height="match_parent"
                android:textCursorDrawable="@drawable/cursor_blanco_generico"
                android:inputType="numberPassword"
                android:maxLength="8"
                android:hint="@string/loggin_msg_password">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEnviarDatos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/btn_redondo_trasparente_blanco_generico"
            android:elevation="2dp"
            android:text="@string/loggin_msg_title_LOGIN"
            android:textColor="@color/blanco"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnlevantarRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/loggin_msg_Registrarse"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            app:layout_constraintEnd_toEndOf="@+id/btnEnviarDatos"
            app:layout_constraintTop_toBottomOf="@+id/btnEnviarDatos">

        </androidx.appcompat.widget.AppCompatButton>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>